force-app/main/default/objects/Solar_Panel__c/Solar_Panel__c.object-meta.xml
<CustomObject>
    <label>Solar_Panel</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Solar_Panel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solar Panels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>