force-app/main/default/objects/Solar_Panel__c/fields/Aesthetic_Options__c.field-meta.xml
<CustomField>
    <fullName>Aesthetic_Options__c</fullName>
    <label>Aesthetic Options</label>
    <length>120</length>
    <type>Text</type>
</CustomField>