force-app/main/default/objects/Solar_Panel__c/fields/Power_Output_Wattage__c.field-meta.xml
<CustomField>
    <fullName>Power_Output_Wattage__c</fullName>
    <label>Power_Output_Wattage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>