force-app/main/default/objects/Solar_Panel__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>A unique identifier for the product.</description>
    <label>Product Code</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>