force-app/main/default/objects/Solar_Panel__c/fields/Warranty_Period_Years__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Period_Years__c</fullName>
    <label>Warranty_Period_Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>